--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ diesel = { version = "=2.2.2", features = [
     "chrono",
     "numeric",
     "uuid",
+    "serde_json",
 ] }
 chrono = { version = "0.4.26", features = ["serde"] }
 dotenv = "0.15.0"
@@ -65,3 +66,6 @@ aws-config = "1.5.10"
 aws-sdk-sqs = "1.49.0"
 aws-types = "1.3.3"
 backoff = { version = "0.4.0", features = ["tokio"] }
+validator = { version = "0.20.0", features = ["derive"] }
+regex = "1.9.0"
+lazy_static = "1.4.0"
