--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,3 +69,4 @@ backoff = { version = "0.4.0", features = ["tokio"] }
 validator = { version = "0.20.0", features = ["derive"] }
 regex = "1.9.0"
 lazy_static = "1.4.0"
+subtle = "2.6.1"
