Get subrepos for flakehub publishing

--- a/.github/workflows/flakehub-publish-rolling.yml
+++ b/.github/workflows/flakehub-publish-rolling.yml
@@ -11,6 +11,8 @@ jobs:
       contents: "read"
     steps:
       - uses: "actions/checkout@v4"
+        with:
+          submodules: recursive
       - uses: "DeterminateSystems/determinate-nix-action@v3"
       - uses: "DeterminateSystems/flakehub-cache-action@main"
       - uses: "DeterminateSystems/flakehub-push@main"
